lab1/Test/L1-A-10-86.output
Error Type B at Line 1
Error Type B at Line 5
Error Type B at Line 6
Error Type A at Line 9
Error Type A at Line 14
Error Type B at Line 24
Error Type A at Line 30
Error Type B at Line 34
